# task_manager

./: .gitignore  db.sqlite3  pyproject.toml
accounts/: admin.py  apps.py  forms.py  models.py  tests.py
accounts/base/: admin.py  forms.py  models.py
accounts/base/tests/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_tel.py
common/: date_utils.py  file_utils.py  html_parser.py  http_utils.py  import_export.py  log_utils.py  model_utils.py  numeric_utils.py  report_utils.py  utils.py  view_utils.py
common/tests/: __init__.py  date_utils.py  file_utils.py  html_parser.py  http_utils.py  import_export.py  log_utils.py  model_utils.py  numeric_utils.py  report_utils.py  utils.py  view_utils.py
mainapp/: admin.py  forms.py  models.py  urls.py  views.py
mainapp/base/: admin.py  form_controls.py  formats.py  models.py  restricted_select.py
mainapp/base/tests/: admin.py  form_controls.py  formats.py  models.py  restricted_select.py
mainapp/migrations/: 0001_initial.py  0002_task_content_task_user.py  0003_profile.py  0004_alter_profile_profile_img.py  0005_alter_profile_profile_img_alter_profile_user.py
mainapp/templates/: delete-task.html  index.html  login.html  nav.html  register.html  tasks.html  update-task.html
mainapp/templates/profile/: account-settings.html  all-tasks.html  create-task.html  dashboard.html  delete-account.html  delete-task.html  update-profile.html  (+1 more)
static/css/: style.css
task_manager/: settings.py  urls.py
task_manager/settings/: __init__.py  accounts.py  common.py  main.py
