[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django==5.2.12",
    "django-admin-honeypot-updated-2021>=1.2.0",
    "django-crispy-forms>=2.6",
    "environs>=14.6.0",
    "pillow>=12.2.0",
]
